--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ ol li {/* first selector */
 </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container" style="padding-top: 20px">
 <div class="row-responsive">
        <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
