--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <title>Easy Recipes</title>
 
+<!-- if you want to see the site visit https://pepeagostini.github.io/peter-code/-->
 <style type="text/css" media="screen">
 
   body , div
@@ -68,6 +69,19 @@ footer > div{
   padding-bottom: 10px;
 
 }
+
+footer > div a{
+color: grey;
+font-family: arial;
+
+}
+
+footer > div label{
+color: black;
+font-family: arial;
+font-weight: bold;
+}
+
   @media screen and (max-width: 400px) {
   .left, .main, .right {
     width: 100%;
@@ -83,6 +97,7 @@ footer > div{
     width: 100%;
   }
 }
+
 
 </style>
 </head>
@@ -210,7 +225,7 @@ Garlic salt and ground pepper, to taste</li>
     <li><a href="https://www.conmishijos.com/actividades-para-ninos/recetas/espaguetis-a-la-bolonesa-receta-tradicional-italiana/">With my children</a></li>
     <li><a href="https://www.kiwilimon.com/receta/pastas/spaghetti/spaghetti-a-la-bolonesa">Kiwilimon</a></li>
     <li><a href="https://www.cocinadelirante.com/receta/sopa/bolonesa-receta-de-pasta-con-salsa-italiana-de-carne">delusional kitchen</a></li>
-<li><a href="mailto:pedrotpereza@gmail.com">Email me</a></li>
+
        </ul>
 
 
@@ -219,36 +234,30 @@ Garlic salt and ground pepper, to taste</li>
 
       <hr class="clearfix w-100 d-md-none">
 
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
 
-        <!-- Links -->
-
-
-
-
-      </div>
-      <!-- Grid column -->
 
       <hr class="clearfix w-100 d-md-none">
 
       <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
+      <div class="col-md-6 mx-auto">
 
         <!-- Links -->
+<form action="" method="get" accept-charset="utf-8">
 
+<div class="form-group">
+  <label for="">CONTACT ME</label><br>
+  <label for="">Fist Name</label><br>
+  <input type="text" name="name" size="50" value=""><br>
 
+<label for="">Last Name</label><br>
+  <input type="text" name="name" size="50" value=""><br>
+  <label for="">Message</label><br>
+  <textarea cols="52" rows="3"></textarea><br>
+  <button class="btn btn-primary" type="submit" value="">SEND</button>
+  <button class="btn btn-warning" type="button" value="">CLEAR</button>
+</div>
 
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
+</form>
 
 
 
